--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,18 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "video-mcp-server"
+name = "video-mcp-standard"
 version = "0.1.0"
-description = "MCP server for video processing with AWS Bedrock"
+description = "Standard MCP server for video processing with AWS Bedrock"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "mcp>=0.9.0",
-    "boto3>=1.34.0",
-    "strands-agents>=0.1.0"
+    "boto3>=1.34.0"
 ]
 
 [project.scripts]
-video-mcp-server = "video_mcp.server:main"
+video-mcp-standard = "video_mcp_standard.server:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
